 389.	[bug]		Attempting to send a reqeust over IPv6 using
			dns_request_create() on a system without IPv6
			support caused an assertion failure [RT #235].

 386.	[bug]		Missing strdup() of ACL name caused random
			ACL matching failures [RT #228].

 380.	[bug]		nsupdate didn't work with IPv6.

	--- 9.0.0rc2 released ---

 377.	[bug]		When additional data lookups were refused due to 
			"allow-query", the databases were still being
			attached causing reference leaks.

 376.	[bug]		The server should always use good entropy when
			performing cryptographic functions needing entropy.

 375.	[bug]		Per-zone allow-query did not properly override the
			view/global one for CNAME targets and additional
			data [RT #220].

 374.	[bug]		SOA in authoritative negative responses had wrong TTL.

 373.	[func]		nslookup is now installed by "make install".

 372.	[bug]		Deal with Microsoft DNS servers appending two bytes of
			garbage to zone transfer requests.

 371.	[bug]		At high debug levels, doing an outgoing zone transfer
			of a very large RRset could cause an assertion failure
			during logging.

 370.	[bug]		The error messages for rollforward failures were
			overly terse.

 367.   [bug]		Allow proper selection of server on nslookup command
			line.

 365.	[bug]		nsupdate -k leaked memory.

 362.	[bug]		rndc no longer aborts if the configuration file is
			missing an options statement. [RT #209]

 359.	[bug]		dnssec-signzone occasionally signed glue records.

 357.	[bug]		The zone file parser crashed if the argument
			to $INCLUDE was a quoted string.

 354.	[doc]		Man pages for the dnssec tools are now included in
			the distribution, in doc/man/dnssec.

 353.	[bug]		double increment in lwres/gethost.c:copytobuf().
			(RT# 187)

 352.	[bug]		Race condition in dns_client_t startup could cause
			an assertion failure.

 351.	[bug]		Constructing a response with rcode SERVFAIL to a TSIG
			signed query could crash the server.
